Cycles regression: Decreasing sample count below current viewport samples causes viewport to reset #91598

Closed
opened 2021-09-22 10:59:02 +02:00 by Alaska · 6 comments
Member

System Information
Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.31 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.74

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-22 07:47, hash: 90b485845c
Worked: Prior to 0803119725

Short description of error
While in viewport rendered mode, changing the viewport sample count to lower than your current number of rendered viewport samples results in the viewport reseting. This did not happen prior to the Cycles-X merge. Here's a video.
Demonstration of resetting viewport.mp4

Exact steps for others to reproduce the error

  1. Create a scene that has noticable noise at low sample counts.
  2. Change the viewport mode to Rendered
  3. Adjust the Viewport Samples count to below the number of samples currently rendered in the viewport and notice that the viewport resets back to 1 sample. Test it in a version of Blender from prior to the Cycles-X merge and notice that this does not happen.
**System Information** Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.31 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.74 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-22 07:47, hash: `90b485845c` Worked: Prior to 0803119725 **Short description of error** While in viewport rendered mode, changing the viewport sample count to lower than your current number of rendered viewport samples results in the viewport reseting. This did not happen prior to the Cycles-X merge. Here's a video. [Demonstration of resetting viewport.mp4](https://archive.blender.org/developer/F10540624/Demonstration_of_resetting_viewport.mp4) **Exact steps for others to reproduce the error** 1. Create a scene that has noticable noise at low sample counts. 2. Change the viewport mode to `Rendered` 3. Adjust the `Viewport Samples` count to below the number of samples currently rendered in the viewport and notice that the viewport resets back to 1 sample. Test it in a version of Blender from prior to the Cycles-X merge and notice that this does not happen.
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Brecht Van Lommel self-assigned this 2021-09-22 16:32:25 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Brecht Van Lommel was unassigned by Sergey Sharybin 2021-09-22 17:38:11 +02:00
Sergey Sharybin self-assigned this 2021-09-22 17:38:11 +02:00

Added subscriber: @brecht

Added subscriber: @brecht

This issue was referenced by blender/cycles@b8716ff49c

This issue was referenced by blender/cycles@b8716ff49cbf1b347b4b5931d014c8604c5bb4b4

This issue was referenced by 4068b6b5a7

This issue was referenced by 4068b6b5a7112647f4efe4f7df0ee3c6399a1b2d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91598
No description provided.