Fix T91598: Decreasing sample count causes viewport to reset

Differential Revision: https://developer.blender.org/D12601